generate swagger
